[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-trace-validator"
version = "0.1.0"
description = "Parse a JSON agent trace (steps with tool calls, inputs, outputs, and durations), validate that there are no cycles, every tool call has a matching output, and total elapsed time stays under a budget"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Amarel Taylor Scott" }]
keywords = ["llm", "agents", "ai", "cli"]
dependencies = []

[tool.setuptools]
py-modules = ["agent_trace_validator", "demo_errors"]
